# azbincache

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  action.yml  flake.nix
.github/workflows/: build.yml
docs/: cli-design-proposal.md  serenitea-pot-integration.md
docs/examples/: build-and-cache.yml
src/: cache_info.rs  cli.rs  compress.rs  dedup.rs  doctor.rs  fingerprint.rs  gc.rs  lib.rs  main.rs  manifest.rs  narinfo.rs  nix.rs  nixbase32.rs  push.rs  sign.rs  storage.rs
src/storage/: azure.rs  http.rs
tests/: azure_azurite.rs
tests/nixos/: end-to-end.nix
